# beam-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-cli.yml  release-go.yml  release-js.yml
docs/: sandbox-naming.md  sandbox-product-gaps.md
go/: client.go  config.go  config_test.go  doc.go  docker.go  errors.go  filesystem.go  go.mod  go.sum  grpc_test.go  image.go  integration_test.go  process.go  process_test.go  sandbox.go  sync.go  sync_test.go  volume.go
go/examples/: README.md
go/examples/basic/: main.go
go/examples/docker/: main.go
go/examples/filesystem/: main.go
go/examples/http/: main.go
go/examples/resources/: main.go
go/examples/snapshot/: main.go
go/examples/sync-local-dir/: main.go
js/: .gitignore  .npmignore  LICENSE  README.md  index.ts  jest.config.ts  package-lock.json  package.json  tsc-multi.json  tsconfig.json
js/lib/: index.ts  sync.ts  util.ts
js/lib/resources/: base.ts  deployment.ts  task.ts  volume.ts
js/lib/resources/abstraction/: image.ts  pod.ts  sandbox.ts  stub.ts
js/lib/types/: autoscaler.ts  base.ts  common.ts  deployment.ts  image.ts  pod.ts  pricing.ts  schema.ts  stub.ts  task.ts  volume.ts
js/scripts/: make-dist-package-json.cjs
js/tests/: sandbox-network.test.ts  sandbox-parity.test.ts  sandbox-stream.test.ts  sync.test.ts  utils.test.ts
python/: pyproject.toml
python/src/beam/: __main__.py
python/src/beam/cli/: configure.py  login.py  logs.py  quickstart.py  utils.py
python/src/beam/client/: client.py
python/tests/cli/: test_utils.py
src/beam/: __init__.py  integrations.py
src/beam/cli/: configure.py  example.py  login.py  logs.py  main.py  quickstart.py  status.py  utils.py
src/beam/client/: __init__.py  client.py
