[tool.poetry]
name = "beam-client"
version = "0.2.0"
description = ""
authors = ["beam.cloud <support@beam.cloud>"]
packages = [
    { include = "beam/**/*.py", from = "src" },
    { include = "beam", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
marshmallow = "3.18.0"
marshmallow-dataclass = "^8.5.9"
typeguard = "^2.13.3"
croniter = "^1.3.7"
Jinja2 = "^3.1.2"
validators = "^0.20.0"
importlib-metadata = "5.2.0"
typing-extensions = "^4.7.1"
astor = "^0.8.1"
grpclib = "^0.4.7"
grpcio = "^1.60.0"
asgiref = "^3.7.2"
cloudpickle = "^3.0.0"
rich = "^13.7.0"
click = "^8.1.7"
betterproto = {version = "^1.2.5", extras = ["compiler"]}
protobuf = "^4.25.1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
beta9 = "0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-env = "^1.1.3"
attrs = "^22.1.0"
docstring-parser = "^0.15"
ruff = "^0.1.11"
pydantic = "^2.5.3"

[tool.poetry.scripts]
beam = "beam.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
exclude = []
src = ["src", "test", "bin"]

[tool.ruff.per-file-ignores]
"src/beam/__init__.py" = ["F403"]
