[tool.poetry]
name = "beam-client"
version = "0.2.59"
description = ""
authors = ["beam.cloud <support@beam.cloud>"]
packages = [
    { include = "beam/**/*.py", from = "src" },
    { include = "beam", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
beta9 = "^0.1.60"
requests = "^2.31.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-env = "^1.1.3"
ruff = "^0.4.2"

[tool.poetry.scripts]
beam = "beam.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
ignore-init-module-imports = true
exclude = []
src = ["src", "test", "bin"]

[tool.ruff.per-file-ignores]
"src/beam/__init__.py" = ["F403"]
